--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,13 @@
           {%- if my_page.title -%}
           <li class="nav-item">
             <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+            
           </li>
           {%- endif -%}
         {% endfor -%}
+        <li class="nav-item">
+          <a class="nav-link" href="/familyrp">FamilyRP </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ site.github.repository_url }}">Contribute on Github</a>
         </li>
