--- a/_includes/alert.html
+++ b/_includes/alert.html
@@ -1,1 +1,1 @@
-<p style="color: red; text-align: center"></p>
+<p style="background-color: #292d32; text-align: center; color: red">This site is still a work in progress. </p>
